# CyberSecurity

./: .gitignore
password-breach-check/: README.md  pyproject.toml
password-breach-check/docs/: Birgul_Yuksel_Final_V1.docx  Birgul_Yuksel_Final_V2.docx  slides-template.txt
password-breach-check/src/: __init__.py  checker.py  config.py  gui_app.py  hibp_client.py  main.py
password-breach-check/src/password_breach_check.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
password-breach-check/tests/: conftest.py  test_checker.py  test_e2e_cli.py  test_hashing.py  test_hibpclient.py  test_prefix_suffix.py  test_strength.py
