[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-breach-check"
version = "0.1.0"
description = "K-anonimlik (HIBP range API) ile parola ihlali kontrol aracı"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
authors = [{name="Student", email="student@example.com"}]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.6.0",
  "mypy>=1.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I"]
ignore = []
fix = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
